# rubiks-cube-solver

./: .clang-format  .gitmodules  CMakeLists.txt  Cube.cpp  Cube.h  README.md  main.cpp
.github/workflows/: checks.yml
src/: Cube.cpp  Cube.h  Render.cpp  Render.h
tests/: CMakeLists.txt  test_cube.cpp
